add task first responsive

--- a/task.html
+++ b/task.html
@@ -41,9 +41,8 @@
             <div class="fontSize61"><b>Add Task</b></div>
         </div>
 
-
-        <form class="task-contentposition">
-
+<div class="task-contentposition">
+ <form>
 
             <div class="task-content">
 
@@ -133,15 +132,33 @@
                 </div>
             </div>
 
-
-
-
             <div class="task-bottom">
-                <div>Button</div>
-                <div>Button</div>
+                <div>
+                    <span class="required-star">*</span>
+                    This field is required
+                </div>
+                <div class="button-group">
+                    <div class="button outline-btn">
+                        Clear
+                        <svg class="colorOnHover" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                            viewBox="0 0 24 25" fill="none">
+                            <path
+                                d="M12.001 12.5001L17.244 17.7431M6.758 17.7431L12.001 12.5001L6.758 17.7431ZM17.244 7.25708L12 12.5001L17.244 7.25708ZM12 12.5001L6.758 7.25708L12 12.5001Z"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="button blue-btn">
+                        Create Task
+                        <img src="./img/check-white.svg" alt="">
+                    </div>
+                </div>
+
             </div>
 
         </form>
+</div>
+
+       
 
     </div>
     <!-- ------------------------------------------------------------------------------------------------------------ -->
