task media column 1130px

--- a/task.html
+++ b/task.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
 
-                <img src="./img/vector-task.svg" alt="">
+                <img class="task-vector" src="./img/vector-task.svg" alt="">
 
                 <div class="right-container">
 
