--- a/task.html
+++ b/task.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
-<body onclick="hideMenuHeader(), hideAddTaskDropDowns()" onload="renderSidebarHeader(), initAddTask()">
+<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), init()">
     <div id="sidebarArea"></div>
     <div id="headerArea"></div>
     <div id="menu-header-container" class="menu-header-container d-none">
@@ -52,7 +52,7 @@
                             Title
                             <span class="required-star">*</span>
                         </div>
-                        <input type="text" placeholder="Enter a title" id="inputNameId" class="fontSize20 width-100P"
+                        <input type="text" placeholder="Enter a title" id="task_title" class="fontSize20 width-100P"
                             required>
                     </div>
 
@@ -60,7 +60,7 @@
                         <div>
                             Description
                         </div>
-                        <textarea id="" class="width-100P fontSize20" placeholder="Enter a Description"
+                        <textarea id="task_description" class="width-100P fontSize20" placeholder="Enter a Description"
                             type="text"></textarea>
                     </div>
 
@@ -147,7 +147,7 @@
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </div>
-                    <div class="button blue-btn">
+                    <div onclick="createTask()" class="button blue-btn">
                         Create Task
                         <img src="./img/check-white.svg" alt="">
                     </div>
