--- a/task.html
+++ b/task.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AddTask</title>
     <script src="script/saveAndLoad.js"></script>
-    <script defer src="script/addTask-templates.js"></script>
-    <script defer src="script/board-addTask-teamfunctions.js"></script>
+    <!-- <script defer src="script/addTask-templates.js"></script> -->
+    <!-- <script defer src="script/board-addTask-teamfunctions.js"></script> -->
     <script defer src="templates/templates.js"></script>
     <script defer src="script/contacts.js"></script>
     <script defer src="./script/task.js"></script>
@@ -36,6 +36,7 @@
     </div>
     <!-- ------------------------------------------------------------------------------------------------------------ -->
     <div id="popup-container" class="dialog-bg d-none"></div>
+    <div id="add_category_dialog" class="dialog-bg d-none"></div>
     <div class="task-container">
         <div class="task-header">
             <div class="fontSize61"><b>Add Task</b></div>
@@ -96,7 +97,7 @@
                                     Urgent
                                     <img src="./img/prioUrgent.svg" alt="">
                                 </div>
-                                <div class="button prio-btn">
+                                <div onclick="renderCategories(), updateSelectedCategory()" class="button prio-btn">
                                     Medium
                                     <img src="./img/prioMedium.svg" alt="">
                                 </div>
@@ -113,11 +114,19 @@
                                 <span class="required-star">*</span>
                             </div>
 
-                            <div id="category_input_container" class="custom-input">
-                                <input placeholder="Select task category" id="category_input" class="fontSize20"
-                                    required>
-                                <img src="./img/arrow-up.svg" alt="">
+                            <div onclick="renderCategories()" id="category_input_container" class="custom-input">
+                                <input type="text" readonly value="Select task category" id="category_input"
+                                    class="fontSize20" required>
+                                <img onclick="renderCategories()" src="./img/arrow-up.svg" alt="">
                             </div>
+                            <div id="category_list_container" class="d-none">
+                                <div id="category_list" class="cateogry-list"></div>
+                                <div onclick="addCategory()" class="button blue-btn">
+                                    Add new category
+                                    <img src="./img/add-task-category.svg" alt="">
+                                </div>
+                            </div>
+
                         </div>
 
                         <div>
@@ -128,12 +137,8 @@
                                 <input placeholder="Add new subtask" id="subtasks_input" class="fontSize20" required>
                                 <img onclick="addSubtask()" src="./img/plus.svg">
                             </div>
-                            <div id="selected_subtasks">
-                                selected_subtasks
-                            </div>
-                            <div id="edit_container" class="d-none">
-
-                            </div>
+                            <div id="selected_subtasks"></div>
+                            <div id="edit_container" class="d-none"></div>
                         </div>
 
 
