solved guest remote storage saving problem and now all user circles are loaded on each page

--- a/board.html
+++ b/board.html
@@ -26,7 +26,7 @@
 </head>
 
 
-<body onclick="hideMenuHeader(), closeTask()" onload="renderSidebarHeader(), initBoard(), initAddTask()">
+<body onclick="hideMenuHeader(), closeTask()" onload="renderSidebarHeader(), initBoard()">
 
     <div id="sidebarArea"></div>
     <div id="headerArea"></div>
