date picking works!

--- a/task.html
+++ b/task.html
@@ -85,7 +85,7 @@
                                 Due date
                                 <span class="required-star">*</span>
                             </div>
-                            <input type="date" placeholder="Enter a title" id="" class="fontSize20 width-100P" required>
+                            <input type="date" placeholder="Enter a title" id="date_picker" class="fontSize20 width-100P" required>
                         </div>
 
                         <div>
