--- a/task.html
+++ b/task.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
-<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), init()">
+<body onclick="hideMenuHeader();" onload="renderSidebarHeader(), init()">
     <div id="sidebarArea"></div>
     <div id="headerArea"></div>
     <div id="menu-header-container" class="menu-header-container d-none">
@@ -41,13 +41,77 @@
         <div class="task-header">
             <div class="fontSize61"><b>Add Task</b></div>
         </div>
-   
-        <div class="task-contentposition">
 
-            <div id="task_popup_section" class="task-popup-bg d-none">
-                <div id="task_popup" class="task-popup-card"></div>
-            </div>
-           
+        <div class="task-contentposition">
+            <!-- <div id="task_popup_section" class="task-popup-bg d-none">
+                <div id="task_popup" class="task-popup-card">
+                    <div class="close-popup-container">
+                        <img onclick="closePopup()" class="close-hover" src="img/close.svg">
+                    </div>
+                   
+                </div>
+            </div> -->
+
+
+
+
+
+            <section class="task-popup-bg d-none" id="task_popup_section">
+
+                <div class="task-popup-card d-flex" id="task_popup">
+
+                    <div class="left-popup">
+                        <img onclick="closePopup()" class="close-hover" src="img/close.svg">
+                        <div id="close_popup_mobile" class="pointer"
+                            onclick="slideOut('contact_popup', 'contact_popup_section', 200)">
+                            <img src="./img/close-white.svg" alt="">
+                        </div>
+                        <div class="left-popup-content">
+                            <img src="./img/join-logo-white.svg" id="join_logo_add_contact">
+                            <spline class="fontSize61"><b id="textChangeToEditContactId">Add contact</b></spline>
+                            <spline class="fontSize27" id="add_contact_underline">Tasks are
+                                better with a team!</spline>
+                            <div class="blue-line">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="center-popup">
+                        <div id="profile_img"></div>
+                        <div id="no_profile_img">
+                            <img class="circle" src="./img/circle.svg">
+                            <img class="person-in-circle" src="./img/person.svg">
+                        </div>
+                    </div>
+
+                    <div class="right-popup d-flex">
+
+                        <div class="custom-select">
+                            <input id="createCategoryInput" placeholder="New category name..." type="text">
+                            <div class="colorSettingBox" id="colorSettingBox">
+                            </div>
+                            <div class="addContactPopupBoxRightBtnPosition">
+                                <button onclick="stopCreateCategory()" class="clearBtn">
+                                    <spline class="fontSize20">Cancel</spline>
+                                    <svg class="clearSvg" xmlns="http://www.w3.org/2000/svg" width="25" height="24"
+                                        viewBox="0 0 25 24" fill="none">
+                                        <path
+                                            d="M12.2496 11.9998L17.4926 17.2428M7.00659 17.2428L12.2496 11.9998L7.00659 17.2428ZM17.4926 6.75684L12.2486 11.9998L17.4926 6.75684ZM12.2486 11.9998L7.00659 6.75684L12.2486 11.9998Z"
+                                            stroke="#2A3647" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
+                                </button>
+                                <button onclick="confirmCreateCategory()" class="createBtn blueBtn">Create category<img
+                                        class="createImg" src="./img/check.svg"></button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+
+
             <form>
                 <div class="task-content">
 
@@ -126,7 +190,7 @@
                             </div>
                             <div id="category_list_container" class="d-none">
                                 <div id="category_list" class="cateogry-list"></div>
-                                <div onclick="addCategory()" class="button blue-btn">
+                                <div onclick="openAddCategoryPopup()" class="button blue-btn">
                                     Add new category
                                     <img src="./img/add-task-category.svg" alt="">
                                 </div>
