add category html code in functions

--- a/task.html
+++ b/task.html
@@ -76,19 +76,20 @@
                     </div>
 
                     <div class="center-popup">
-
-                        <div class="center-popup-content" id="no_profile_img">
+                        <div id="center_popup_content"></div>
+                        <!-- <div class="center-popup-category-content">
                             <div class="add-category-logo-bg"></div>
                             <img class="person-in-circle" src="./img/add-task-category.svg">
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="right-popup d-flex">
-                        <div id="right_popup_content"></div>
+
                         <div id="close_popup" class="pointer">
                             <img onclick="closePopup()" src="./img/close.svg" alt="">
                         </div>
-                        <div class="custom-select">
+                        <div id="right_popup_content"></div>
+                        <!-- <div class="custom-select">
                             <input id="createCategoryInput" placeholder="New category name..." type="text">
                             <div class="colorSettingBox" id="colorSettingBox">
                             </div>
@@ -108,14 +109,14 @@
                                     </svg>
                                 </button>
                                 <button onclick="confirmCreateCategory()" class="button blue-btn">
-                                    <!-- <spline> -->
+
                                     <span id="textChangeToSaveId">Create category</span>
-                                    <!-- </spline> -->
+
                                     <img src="./img/check-white.svg">
                                 </button>
 
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
