--- a/task.html
+++ b/task.html
@@ -149,19 +149,19 @@
                             <div>
                                 Assigned to
                             </div>
-                            <div onclick="openContactList()" id="assigned_to_input_container" class="custom-input">
+                            <div onclick="toggleContactList()" id="assigned_to_input_container" class="custom-input">
                                 <input placeholder="Select contacts to assign" id="" class="fontSize20">
                                 <img id="contact_select_arrow_up" class="d-none" src="./img/arrow-up.svg" alt="">
                                 <img id="contact_select_arrow_down" src="./img/arrow-down.svg" alt="">
                             </div>
                             <div id="contact_list_container" class="d-none">
                                 <div id="contact_list"></div>
-                                <div id="selected_contacts"></div>
                                 <div onclick="openAddContactPopup()" class="button blue-btn">
                                     Add contact
                                     <img src="./img/add-task-person-add.svg" alt="">
                                 </div>
                             </div>
+                            <div id="selected_contacts"></div>
                         </div>
                     </div>
 
@@ -204,7 +204,7 @@
                                 <span class="required-star">*</span>
                             </div>
 
-                            <div onclick="renderCategories()" id="category_input_container" class="custom-input">
+                            <div onclick="toggleCategoryList()" id="category_input_container" class="custom-input">
                                 <input type="text" readonly value="Select task category" id="category_input"
                                     class="fontSize20 pointer" required>
                                 <img onclick="renderCategories()" class="d-none" id="category_select_arrow_up" src="./img/arrow-up.svg"
