--- a/board.html
+++ b/board.html
@@ -143,9 +143,14 @@
         <div class="addTaskPopupPosition d-flex" id="edit_popup">
 
 
+
             <div class="contentPositionAddTaskPopup">
                 <div class="addTaskPopupHeadlineContainer">
                     <div class="fontSize61"><b>Edit Task</b></div>
+                    <div id="close_popup" class="pointer"
+                    onclick="slideOut('edit_popup', 'edit_popup_section', 200)">
+                    <img src="./img/close.svg" alt="">
+                </div>
                 </div>
 
                 <!-- <div class="task-contentposition"> -->
