task editing works!

--- a/board.html
+++ b/board.html
@@ -320,7 +320,7 @@
                                             stroke-linejoin="round" />
                                     </svg>
                                 </div>
-                                <div onclick="createTask()" class="button blue-btn">
+                                <div onclick="submitEdit()" class="button blue-btn">
                                     Create Task
                                     <img src="./img/check-white.svg" alt="">
                                 </div>
