implemented deselection of assigned contacts

--- a/board.html
+++ b/board.html
@@ -304,24 +304,14 @@
                             </div>
                         </div>
 
-                        <div class="task-bottom">
+                        <div class="task-bottom-edit">
                             <div>
                                 <span class="required-star">*</span>
                                 This field is required
                             </div>
                             <div class="button-group">
-                                <div class="button outline-btn">
-                                    Clear
-                                    <svg class="colorOnHover" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                        viewBox="0 0 24 25" fill="none">
-                                        <path
-                                            d="M12.001 12.5001L17.244 17.7431M6.758 17.7431L12.001 12.5001L6.758 17.7431ZM17.244 7.25708L12 12.5001L17.244 7.25708ZM12 12.5001L6.758 7.25708L12 12.5001Z"
-                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                            stroke-linejoin="round" />
-                                    </svg>
-                                </div>
                                 <div onclick="submitEdit()" class="button blue-btn">
-                                    Create Task
+                                    OK
                                     <img src="./img/check-white.svg" alt="">
                                 </div>
                             </div>
