set selct contact input id

--- a/task.html
+++ b/task.html
@@ -150,7 +150,7 @@
                                 Assigned to
                             </div>
                             <div onclick="toggleContactList()" id="assigned_to_input_container" class="custom-input">
-                                <input placeholder="Select contacts to assign" id="" class="fontSize20">
+                                <input placeholder="Select contacts to assign" id="assigned_to_input" class="fontSize20">
                                 <img id="contact_select_arrow_up" class="d-none" src="./img/arrow-up.svg" alt="">
                                 <img id="contact_select_arrow_down" src="./img/arrow-down.svg" alt="">
                             </div>
