form validation add task

--- a/task.html
+++ b/task.html
@@ -174,7 +174,7 @@
                                 Due date
                                 <span class="required-star">*</span>
                             </div>
-                            <input type="date" placeholder="Enter a title" id="date_picker"
+                            <input type="date" id="date_picker"
                                 class="fontSize20 width-100P" required>
                         </div>
 
@@ -255,7 +255,7 @@
                                     stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <div onclick="createTask()" class="button blue-btn">
+                        <div onclick="submitForm()" class="button blue-btn">
                             Create Task
                             <img src="./img/check-white.svg" alt="">
                         </div>
