--- a/board.html
+++ b/board.html
@@ -147,7 +147,7 @@
             <div class="contentPositionAddTaskPopup">
                 <div class="addTaskPopupHeadlineContainer">
                     <div class="fontSize61"><b>Edit Task</b></div>
-                    <div id="close_popup" class="pointer"
+                    <div class="pointer close-popup"
                     onclick="slideOut('edit_popup', 'edit_popup_section', 200)">
                     <img src="./img/close.svg" alt="">
                 </div>
