--- a/task.html
+++ b/task.html
@@ -43,17 +43,6 @@
         </div>
 
         <div class="task-contentposition">
-            <!-- <div id="task_popup_section" class="task-popup-bg d-none">
-                <div id="task_popup" class="task-popup-card">
-                    <div class="close-popup-container">
-                        <img onclick="closePopup()" class="close-hover" src="img/close.svg">
-                    </div>
-                </div>
-            </div> -->
-
-
-
-
 
             <section class="task-popup-bg d-none" id="task_popup_section">
 
@@ -65,21 +54,13 @@
                             <img onclick="closePopup()" src="./img/close-white.svg">
                         </div>
                         <div id="left_popup_content">
-                            <!-- <img src="./img/join-logo-white.svg" id="join_logo_add_contact">
-                            <spline class="left-popup-text-headline"><b>Add new category</b></spline>
-                            <spline class="left-popup-text">Tasks are
-                                better with a category!</spline>
-                            <div class="blue-line">
-                            </div> -->
+
                         </div>
                     </div>
 
                     <div class="center-popup">
                         <div id="center_popup_content"></div>
-                        <!-- <div class="center-popup-category-content">
-                            <div class="add-category-logo-bg"></div>
-                            <img class="person-in-circle" src="./img/add-task-category.svg">
-                        </div> -->
+
                     </div>
 
                     <div class="right-popup d-flex">
@@ -88,34 +69,6 @@
                             <img onclick="closePopup()" src="./img/close.svg" alt="">
                         </div>
                         <div id="right_popup_content"></div>
-                        <!-- <div class="custom-select">
-                            <input id="createCategoryInput" placeholder="New category name..." type="text">
-                            <div class="colorSettingBox" id="colorSettingBox">
-                            </div>
-                            <div class="popup-button-container">
-
-                                <button class="button outline-btn"
-                                    onclick="slideOut('contact_popup', 'contact_popup_section', 200)"
-                                    id="cancelBtnMobileId">
-                                    <spline id="editCancelButtonId">Cancel</spline>
-
-                                    <svg class="colorOnHover" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                        viewBox="0 0 24 25" fill="none">
-                                        <path
-                                            d="M12.001 12.5001L17.244 17.7431M6.758 17.7431L12.001 12.5001L6.758 17.7431ZM17.244 7.25708L12 12.5001L17.244 7.25708ZM12 12.5001L6.758 7.25708L12 12.5001Z"
-                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                            stroke-linejoin="round" />
-                                    </svg>
-                                </button>
-                                <button onclick="confirmCreateCategory()" class="button blue-btn">
-
-                                    <span id="textChangeToSaveId">Create category</span>
-
-                                    <img src="./img/check-white.svg">
-                                </button>
-
-                            </div>
-                        </div> -->
 
                     </div>
                 </div>
@@ -132,7 +85,7 @@
                                 Title
                                 <span class="required-star">*</span>
                             </div>
-                            <input type="text" placeholder="Enter a title" id="task_title" class="fontSize20 width-100P"
+                            <input placeholder="Enter a title" id="task_title" class="fontSize20 width-100P"
                                 required>
                         </div>
 
@@ -150,7 +103,8 @@
                                 Assigned to
                             </div>
                             <div onclick="toggleContactList()" id="assigned_to_input_container" class="custom-input">
-                                <input onkeyup=" searchContacts()" placeholder="Select contacts to assign" id="assigned_to_input" class="fontSize20">
+                                <input onkeyup=" searchContacts()" placeholder="Select contacts to assign"
+                                    id="assigned_to_input" class="fontSize20">
                                 <img id="contact_select_arrow_up" class="d-none" src="./img/arrow-up.svg" alt="">
                                 <img id="contact_select_arrow_down" src="./img/arrow-down.svg" alt="">
                             </div>
@@ -174,8 +128,7 @@
                                 Due date
                                 <span class="required-star">*</span>
                             </div>
-                            <input type="date" id="date_picker"
-                                class="fontSize20 width-100P" required>
+                            <input type="date" id="date_picker" class="fontSize20 width-100P" required>
                         </div>
 
                         <div>
@@ -207,8 +160,8 @@
                             <div onclick="toggleCategoryList()" id="category_input_container" class="custom-input">
                                 <input type="text" readonly value="Select task category" id="category_input"
                                     class="fontSize20 pointer" required>
-                                <img onclick="renderCategories()" class="d-none" id="category_select_arrow_up" src="./img/arrow-up.svg"
-                                    alt="">
+                                <img onclick="renderCategories()" class="d-none" id="category_select_arrow_up"
+                                    src="./img/arrow-up.svg" alt="">
                                 <img id="category_select_arrow_down" src="./img/arrow-down.svg" alt="">
                             </div>
                             <div id="category_list_container" class="d-none">
