--- a/board.html
+++ b/board.html
@@ -56,9 +56,8 @@
                             class="searchbar-symbol d-none" id="searchClose">
                     </div>
                 </div>
-                <button
-                    onclick="toggleVisibilityAddTask('', 'addTaskPop'), renderAddTaskContent(), statusSelected('toDo'), slide('addTaskPopupPositionFront', 'addTaskPop')"
-                    id="button-ad-task" type="button" class="button fontSize20">
+                <button onclick="addTaskFromBoard(), statusSelected('toDo')" id="button-ad-task" type="button"
+                    class="button fontSize20">
                     <span class="addTaskText">Add task</span>
                     <img src="img/plus-white.svg">
                 </button>
@@ -74,12 +73,12 @@
                 <section>
                     <div class="statusheadline">
                         <span class="fontSize20"><b>To do</b></span>
-                        <img onclick="toggleVisibilityAddTask('', 'addTaskPop'), renderAddTaskContent(), statusSelected('toDo'), slide('addTaskPopupPositionFront', 'addTaskPop')"
+                        <img onclick="addTaskFromBoard(), statusSelected('toDo')"
                             src="img/plus-box.svg" alt="Not found">
                     </div>
 
-                    <div id="toDo" class="drag-area" ondrop="moveTo('toDo')"
-                        ondragleave="removeHighlight('toDo')" ondragover="allowDrop(event); highlight('toDo')">
+                    <div id="toDo" class="drag-area" ondrop="moveTo('toDo')" ondragleave="removeHighlight('toDo')"
+                        ondragover="allowDrop(event); highlight('toDo')">
                     </div>
                 </section>
 
@@ -130,9 +129,11 @@
 
 
 
+    <section class="task-popup-bg d-none" id="board_task_popup_section">
+TEST
+        <div class="addTaskPopupPosition d-flex" id="board_task_popup"><div>
 
-
-
+    </section>
     <!-- ------------------------------------------------------------------------->
     <!-- ----------------------------EDIT-------------------------------------- -->
     <!-- EDIT -->
@@ -147,178 +148,174 @@
             <div class="contentPositionAddTaskPopup">
                 <div class="addTaskPopupHeadlineContainer">
                     <div class="fontSize61"><b>Edit Task</b></div>
-                    <div class="pointer close-popup"
-                    onclick="slideOut('edit_popup', 'edit_popup_section', 200)">
-                    <img src="./img/close.svg" alt="">
-                </div>
+                    <div class="pointer close-popup" onclick="slideOut('edit_popup', 'edit_popup_section', 200)">
+                        <img src="./img/close.svg" alt="">
+                    </div>
                 </div>
 
                 <!-- <div class="task-contentposition"> -->
 
-                    <section class="task-popup-bg d-none" id="task_popup_section">
+                <section class="task-popup-bg d-none" id="task_popup_section">
 
-                        <div class="task-popup-card d-flex" id="task_popup">
+                    <div class="task-popup-card d-flex" id="task_popup">
 
-                            <div class="left-popup">
+                        <div class="left-popup">
 
-                                <div id="close_popup_mobile">
-                                    <img onclick="closePopup()" src="./img/close-white.svg">
-                                </div>
-                                <div id="left_popup_content">
-
-                                </div>
+                            <div id="close_popup_mobile">
+                                <img onclick="closePopup()" src="./img/close-white.svg">
                             </div>
+                            <div id="left_popup_content">
 
-                            <div class="center-popup">
-                                <div id="center_popup_content"></div>
-
-                            </div>
-
-                            <div class="right-popup d-flex">
-
-                                <div id="close_popup" class="pointer">
-                                    <img onclick="closePopup()" src="./img/close.svg" alt="">
-                                </div>
-                                <div id="right_popup_content"></div>
-                            </div>
-                        </div>
-                    </section>
-
-
-
-                    <form>
-                        <div class="task-content">
-
-                            <div class="left-container">
-                                <div>
-                                    <div>
-                                        Title
-                                        <span class="required-star">*</span>
-                                    </div>
-                                    <input type="text" placeholder="Enter a title" id="task_title"
-                                        class="fontSize20 width-100P" required>
-                                </div>
-
-                                <div>
-                                    <div>
-                                        Description
-                                    </div>
-                                    <textarea id="task_description" class="width-100P fontSize20"
-                                        placeholder="Enter a Description" type="text"></textarea>
-                                </div>
-
-
-                                <div>
-                                    <div>
-                                        Assigned to
-                                    </div>
-                                    <div onclick="toggleContactList()" id="assigned_to_input_container"
-                                        class="custom-input">
-                                        <input placeholder="Select contacts to assign" id="assigned_to_input" class="fontSize20">
-                                        <img id="contact_select_arrow_up" class="d-none" src="./img/arrow-up.svg"
-                                            alt="">
-                                        <img id="contact_select_arrow_down" src="./img/arrow-down.svg" alt="">
-                                    </div>
-                                    <div id="contact_list_container" class="d-none">
-                                        <div id="contact_list"></div>
-                                        <div onclick="openAddContactPopup()" class="button blue-btn">
-                                            Add contact
-                                            <img src="./img/add-task-person-add.svg" alt="">
-                                        </div>
-                                    </div>
-                                    <div id="selected_contacts"></div>
-                                </div>
-                            </div>
-
-                            <img class="task-vector" src="./img/vector-task.svg" alt="">
-
-                            <div class="right-container">
-
-                                <div>
-                                    <div>
-                                        Due date
-                                        <span class="required-star">*</span>
-                                    </div>
-                                    <input type="date" placeholder="Enter a title" id="date_picker"
-                                        class="fontSize20 width-100P" required>
-                                </div>
-
-                                <div>
-                                    <div>
-                                        Prio
-                                    </div>
-                                    <div class="prio-container">
-                                        <div id="button_urgent" onclick="selectPriority('urgent')"
-                                            class="button prio-btn">
-                                            <span>Urgent</span>
-                                            <img id="prio_urgent" src="./img/prio-urgent.svg" alt="">
-                                        </div>
-                                        <div id="button_medium" onclick="selectPriority('medium')"
-                                            class="button prio-btn">
-                                            Medium
-                                            <img id="prio_medium" src="./img/prio-medium.svg" alt="">
-                                        </div>
-                                        <div id="button_low" onclick="selectPriority('low')" class="button prio-btn">
-                                            Low
-                                            <img id="prio_low" src="./img/prio-low.svg" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div>
-                                    <div>
-                                        Category
-                                        <span class="required-star">*</span>
-                                    </div>
-
-                                    <div onclick="toggleCategoryList()" id="category_input_container"
-                                        class="custom-input">
-                                        <input type="text" readonly value="Select task category" id="category_input"
-                                            class="fontSize20 pointer" required>
-                                        <img onclick="renderCategories()" class="d-none" id="category_select_arrow_up"
-                                            src="./img/arrow-up.svg" alt="">
-                                        <img id="category_select_arrow_down" src="./img/arrow-down.svg" alt="">
-                                    </div>
-                                    <div id="category_list_container" class="d-none">
-                                        <div id="category_list" class="cateogry-list"></div>
-                                        <div onclick="openAddCategoryPopup()" class="button blue-btn">
-                                            Add new category
-                                            <img src="./img/add-task-category.svg" alt="">
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                                <div>
-                                    <div>
-                                        Subtasks
-                                    </div>
-                                    <div id="subtasks_input_container" class="custom-input">
-                                        <input placeholder="Add new subtask" id="subtasks_input" class="fontSize20"
-                                            required>
-                                        <img onclick="addSubtask()" src="./img/plus.svg">
-                                    </div>
-                                    <div id="selected_subtasks"></div>
-                                    <div id="edit_container" class="d-none"></div>
-                                </div>
                             </div>
                         </div>
 
-                        <div class="task-bottom-edit">
+                        <div class="center-popup">
+                            <div id="center_popup_content"></div>
+
+                        </div>
+
+                        <div class="right-popup d-flex">
+
+                            <div id="close_popup" class="pointer">
+                                <img onclick="closePopup()" src="./img/close.svg" alt="">
+                            </div>
+                            <div id="right_popup_content"></div>
+                        </div>
+                    </div>
+                </section>
+
+
+
+                <form>
+                    <div class="task-content">
+
+                        <div class="left-container">
                             <div>
-                                <span class="required-star">*</span>
-                                This field is required
+                                <div>
+                                    Title
+                                    <span class="required-star">*</span>
+                                </div>
+                                <input type="text" placeholder="Enter a title" id="task_title"
+                                    class="fontSize20 width-100P" required>
                             </div>
-                            <div class="button-group">
-                                <div onclick="submitEdit()" class="button blue-btn">
-                                    OK
-                                    <img src="./img/check-white.svg" alt="">
+
+                            <div>
+                                <div>
+                                    Description
+                                </div>
+                                <textarea id="task_description" class="width-100P fontSize20"
+                                    placeholder="Enter a Description" type="text"></textarea>
+                            </div>
+
+
+                            <div>
+                                <div>
+                                    Assigned to
+                                </div>
+                                <div onclick="toggleContactList()" id="assigned_to_input_container"
+                                    class="custom-input">
+                                    <input placeholder="Select contacts to assign" id="assigned_to_input"
+                                        class="fontSize20">
+                                    <img id="contact_select_arrow_up" class="d-none" src="./img/arrow-up.svg" alt="">
+                                    <img id="contact_select_arrow_down" src="./img/arrow-down.svg" alt="">
+                                </div>
+                                <div id="contact_list_container" class="d-none">
+                                    <div id="contact_list"></div>
+                                    <div onclick="openAddContactPopup()" class="button blue-btn">
+                                        Add contact
+                                        <img src="./img/add-task-person-add.svg" alt="">
+                                    </div>
+                                </div>
+                                <div id="selected_contacts"></div>
+                            </div>
+                        </div>
+
+                        <img class="task-vector" src="./img/vector-task.svg" alt="">
+
+                        <div class="right-container">
+
+                            <div>
+                                <div>
+                                    Due date
+                                    <span class="required-star">*</span>
+                                </div>
+                                <input type="date" placeholder="Enter a title" id="date_picker"
+                                    class="fontSize20 width-100P" required>
+                            </div>
+
+                            <div>
+                                <div>
+                                    Prio
+                                </div>
+                                <div class="prio-container">
+                                    <div id="button_urgent" onclick="selectPriority('urgent')" class="button prio-btn">
+                                        <span>Urgent</span>
+                                        <img id="prio_urgent" src="./img/prio-urgent.svg" alt="">
+                                    </div>
+                                    <div id="button_medium" onclick="selectPriority('medium')" class="button prio-btn">
+                                        Medium
+                                        <img id="prio_medium" src="./img/prio-medium.svg" alt="">
+                                    </div>
+                                    <div id="button_low" onclick="selectPriority('low')" class="button prio-btn">
+                                        Low
+                                        <img id="prio_low" src="./img/prio-low.svg" alt="">
+                                    </div>
                                 </div>
                             </div>
 
+                            <div>
+                                <div>
+                                    Category
+                                    <span class="required-star">*</span>
+                                </div>
+
+                                <div onclick="toggleCategoryList()" id="category_input_container" class="custom-input">
+                                    <input type="text" readonly value="Select task category" id="category_input"
+                                        class="fontSize20 pointer" required>
+                                    <img onclick="renderCategories()" class="d-none" id="category_select_arrow_up"
+                                        src="./img/arrow-up.svg" alt="">
+                                    <img id="category_select_arrow_down" src="./img/arrow-down.svg" alt="">
+                                </div>
+                                <div id="category_list_container" class="d-none">
+                                    <div id="category_list" class="cateogry-list"></div>
+                                    <div onclick="openAddCategoryPopup()" class="button blue-btn">
+                                        Add new category
+                                        <img src="./img/add-task-category.svg" alt="">
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div>
+                                <div>
+                                    Subtasks
+                                </div>
+                                <div id="subtasks_input_container" class="custom-input">
+                                    <input placeholder="Add new subtask" id="subtasks_input" class="fontSize20"
+                                        required>
+                                    <img onclick="addSubtask()" src="./img/plus.svg">
+                                </div>
+                                <div id="selected_subtasks"></div>
+                                <div id="edit_container" class="d-none"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="task-bottom-edit">
+                        <div>
+                            <span class="required-star">*</span>
+                            This field is required
+                        </div>
+                        <div class="button-group">
+                            <div onclick="submitEdit()" class="button blue-btn">
+                                OK
+                                <img src="./img/check-white.svg" alt="">
+                            </div>
                         </div>
 
-                    </form>
+                    </div>
+
+                </form>
                 <!-- </div> -->
 
 
