--- a/task.html
+++ b/task.html
@@ -86,7 +86,7 @@
                                 <span class="required-star">*</span>
                             </div>
                             <input placeholder="Enter a title" id="task_title" class="fontSize20 width-100P"
-                                required>
+                                >
                         </div>
 
                         <div>
@@ -103,7 +103,7 @@
                                 Assigned to
                             </div>
                             <div onclick="toggleContactList()" id="assigned_to_input_container" class="custom-input">
-                                <input onkeyup=" searchContacts()" placeholder="Select contacts to assign"
+                                <input onkeyup="searchContacts()" placeholder="Select contacts to assign"
                                     id="assigned_to_input" class="fontSize20">
                                 <img id="contact_select_arrow_up" class="d-none" src="./img/arrow-up.svg" alt="">
                                 <img id="contact_select_arrow_down" src="./img/arrow-down.svg" alt="">
@@ -159,7 +159,7 @@
 
                             <div onclick="toggleCategoryList()" id="category_input_container" class="custom-input">
                                 <input type="text" readonly value="Select task category" id="category_input"
-                                    class="fontSize20 pointer" required>
+                                    class="fontSize20 pointer">
                                 <img onclick="renderCategories()" class="d-none" id="category_select_arrow_up"
                                     src="./img/arrow-up.svg" alt="">
                                 <img id="category_select_arrow_down" src="./img/arrow-down.svg" alt="">
@@ -179,7 +179,7 @@
                                 Subtasks
                             </div>
                             <div id="subtasks_input_container" class="custom-input">
-                                <input placeholder="Add new subtask" id="subtasks_input" class="fontSize20" required>
+                                <input placeholder="Add new subtask" id="subtasks_input" class="fontSize20">
                                 <img onclick="addSubtask()" src="./img/plus.svg">
                             </div>
                             <div id="selected_subtasks"></div>
