task js comment changes

--- a/board.html
+++ b/board.html
@@ -7,7 +7,7 @@
     <title>Board</title>
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/task.css">
-    <link rel="stylesheet" href="style/addTask_media_query.css">
+    <!-- <link rel="stylesheet" href="style/addTask_media_query.css"> -->
     <link rel="stylesheet" href="templates/header_sidebar.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/board.css">
