--- a/board.html
+++ b/board.html
@@ -130,7 +130,7 @@
 
 
     <section class="task-popup-bg d-none" id="board_task_popup_section">
-TEST
+
         <div class="addTaskPopupPosition d-flex" id="board_task_popup"><div>
 
     </section>
@@ -302,7 +302,7 @@ TEST
                     </div>
 
                     <div class="task-bottom-edit">
-                        <div>
+                        <div class="required-info">
                             <span class="required-star">*</span>
                             This field is required
                         </div>
