--- a/task.html
+++ b/task.html
@@ -158,7 +158,7 @@
                             </div>
 
                             <div onclick="toggleCategoryList()" id="category_input_container" class="custom-input">
-                                <input type="text" readonly value="Select task category" id="category_input"
+                                <input readonly value="Select task category" id="category_input"
                                     class="fontSize20 pointer">
                                 <img onclick="renderCategories()" class="d-none" id="category_select_arrow_up"
                                     src="./img/arrow-up.svg" alt="">
@@ -193,7 +193,7 @@
                 </div>
 
                 <div class="task-bottom">
-                    <div>
+                    <div class="required-info">
                         <span class="required-star">*</span>
                         This field is required
                     </div>
@@ -213,7 +213,6 @@
                             <img src="./img/check-white.svg" alt="">
                         </div>
                     </div>
-
                 </div>
 
             </form>
