changed add task button on board and category and contact creation popup border radius

--- a/board.html
+++ b/board.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <button onclick="addTaskFromBoard(), statusSelected('toDo')" id="button-ad-task" type="button"
-                    class="button fontSize20">
+                    class="button blue-btn fontSize20">
                     <span class="addTaskText">Add task</span>
                     <img src="img/plus-white.svg">
                 </button>
@@ -148,7 +148,7 @@
             <div class="contentPositionAddTaskPopup">
                 <div class="addTaskPopupHeadlineContainer">
                     <div class="fontSize61"><b>Edit Task</b></div>
-                    <div class="pointer close-popup" onclick="slideOut('edit_popup', 'edit_popup_section', 200)">
+                    <div class="close-hover close-popup" onclick="slideOut('edit_popup', 'edit_popup_section', 200)">
                         <img src="./img/close.svg" alt="">
                     </div>
                 </div>
