implemented reset task form and fixed profile picture bug on board

--- a/task.html
+++ b/task.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AddTask</title>
-    <script src="script/saveAndLoad.js"></script>
+    <script src="./script/saveAndLoad.js"></script>
     <!-- <script defer src="script/addTask-templates.js"></script> -->
     <!-- <script defer src="script/board-addTask-teamfunctions.js"></script> -->
-    <script defer src="templates/templates.js"></script>
-    <script defer src="script/contacts.js"></script>
+    <script defer src="./templates/templates.js"></script>
+    <script defer src="./script/contacts.js"></script>
     <script defer src="./script/task.js"></script>
 
     <link rel="stylesheet" href="style/task.css">
