--- a/board.html
+++ b/board.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
 
     <script src="./script/saveAndLoad.js"></script>
-    <script src="script/contacts.js"></script>
-    <script defer src="templates/templates.js"></script>
-    <script defer src="/script/task.js"></script>
+    <script src="./script/contacts.js"></script>
+    <script defer src="./templates/templates.js"></script>
+    <script defer src="./script/task.js"></script>
     <!-- 
     <script defer src="script/board-addTask-teamfunctions.js"></script> -->
     <script defer src="./script/board.js"></script>
