changed width from left and right container on task to prevent button hopping

--- a/task.html
+++ b/task.html
@@ -198,7 +198,7 @@
                         This field is required
                     </div>
                     <div class="button-group">
-                        <div class="button outline-btn">
+                        <div onclick="resetTaskForm()" class="button outline-btn">
                             Clear
                             <svg class="colorOnHover" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 25" fill="none">
